--- a/views/pages/main.hbs
+++ b/views/pages/main.hbs
@@ -60,7 +60,7 @@
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h2>Your Chores</h2>
+          <h2>Users</h2>
 <!--
             <div>    {{#users}}
         
