--- a/views/pages/main.hbs
+++ b/views/pages/main.hbs
@@ -66,7 +66,7 @@
 <div>
 {{#users}}
 <li>
-    <a href="/users/{{_id}}">{{fullname}}</a> 
+    <a href="/users/{{_id}}">{{users}}{{fullname}}</a> 
 </li>
 
     
