--- a/views/pages/main.hbs
+++ b/views/pages/main.hbs
@@ -64,13 +64,13 @@
 
         
 <div>
-{{#users}}
+{{#user}}
 <li>
-    <a href="/users/{{_id}}">{{users}}{{fullname}}</a> 
+    <a href="/users/{{_id}}">{{user}}{{fullname}}</a> 
 </li>
 
     
-{{/users}}
+{{/user}}
 
 
         </div>  </div>  
